--- a/client/client.css
+++ b/client/client.css
@@ -37,6 +37,18 @@ body {
   height: 5px;
   margin-left: -2.5px;
   margin-top: -2.5px;
+  border-radius: 3px;
+  border: 1px solid;
+}
+
+.hit {
+  background-color: #ff7700;
+  width: 20px;
+  height: 20px;
+  margin-left: -10px;
+  margin-top: -10px;
+  border-radius: 10px;
+  border: 1px solid;
 }
 
 .enemy_ship {
@@ -49,16 +61,25 @@ body {
   width: 10%;
   height: 11%;
   margin-left: -5%;
-  margin-top: -5%;;
+  margin-top: -3%;
   font-size: 0.6em;
   color: #ffffff;
 }
 
 #hud {
   position: fixed;
-  display: inline-block;
-  top: 5px;
-  left: 5px;
+  display: inline;
+  top: 10px;
+  left: 10px;
+  z-index: 10;
+}
+
+.hud {
+  position: absolute;
+  display: inline;
+  top: 10px;
+  left: 10px;
+  z-index: -10;
 }
 
 .health {
