--- a/client/client.css
+++ b/client/client.css
@@ -10,10 +10,10 @@ body {
   background-position: center;
   position: fixed;
   display: block;
-  width: 10%;
-  height: 11%;
-  margin-left: -5%;
-  margin-top: -3%;
+  width: 60px;
+  height: 60px;
+  margin-left: -30px;
+  margin-top: -30px;
   color: #ffffff;
   font-size: 0.6em;
 }
@@ -58,10 +58,10 @@ body {
   background-position: center;
   position: fixed;
   display: block;
-  width: 10%;
-  height: 11%;
-  margin-left: -5%;
-  margin-top: -3%;
+  width: 60px;
+  height: 60px;
+  margin-left: -30px;
+  margin-top: -30px;
   font-size: 0.6em;
   color: #ffffff;
 }
@@ -84,6 +84,4 @@ body {
 
 .health {
   color: #ff0000;
-  margin-left: -1%;
-  margin-top: -1%;
 }
