--- a/client/client.css
+++ b/client/client.css
@@ -1,4 +1,6 @@
 body {
+  background-image: url('/nebulafield.jpg');
+  background-repeat: none;
   background-color: #000000;
   font-family: "Trebuchet MS";
 }
@@ -38,7 +40,7 @@ body {
   margin-left: -2.5px;
   margin-top: -2.5px;
   border-radius: 3px;
-  border: 1px solid;
+  border: 0px;
 }
 
 .hit {
@@ -48,7 +50,7 @@ body {
   margin-left: -10px;
   margin-top: -10px;
   border-radius: 10px;
-  border: 1px solid;
+  border: 0px;
 }
 
 .enemy_ship {
@@ -75,13 +77,12 @@ body {
 }
 
 .hud {
-  position: absolute;
-  display: inline;
-  top: 10px;
-  left: 10px;
-  z-index: -10;
+  margin-top: 70px;
+  margin-left: -20px;
 }
 
 .health {
-  color: #ff0000;
+  display: inline-block;
+  height: 2px;
+  background-color: #ff0000;
 }
