--- a/client/client.css
+++ b/client/client.css
@@ -33,6 +33,22 @@ body {
   margin-top: -1px;
 }
 
+.power {
+  background-color: #00ff00;
+  width: 50px;
+  margin-left: -25px;
+}
+
+.superpower {
+  background-color: transparent;
+  height: 26px;
+  width: 26px;
+  margin-left: -13px;
+  margin-top: -13px;
+  border-radius: 16px;
+  border: 2px solid #ffffff;
+}
+
 .enemy {
   background-color: #ff0000;
   width: 5px;
@@ -53,7 +69,7 @@ body {
   border: 0px;
 }
 
-.enemy_ship {
+.enemy_ship_1 {
   background-image: url('/nightraider.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -66,6 +82,44 @@ body {
   margin-top: -30px;
   font-size: 0.6em;
   color: #ffffff;
+}
+
+.enemy_ship_2 {
+  background-image: url('/nightraider.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: fixed;
+  display: block;
+  width: 120px;
+  height: 120px;
+  margin-left: -60px;
+  margin-top: -60px;
+  font-size: 0.6em;
+  color: #ffffff;
+}
+
+.powerup {
+  position: fixed;
+  display: block;
+  width: 30px;
+  height: 30px;
+  margin-left: -15px;
+  margin-top: -15px;
+  border-radius: 18px;
+  border: 2px solid #aaaaaa;
+}
+
+.healthUp {
+  background-color: #ff0000;
+}
+
+.levelUp {
+  background-color: #00aaff;
+}
+
+.clearEnemies {
+  background-color: #ff00ff;
 }
 
 #hud {
@@ -84,5 +138,5 @@ body {
 .health {
   display: inline-block;
   height: 2px;
-  background-color: #ff0000;
+  background-color: #990000;
 }
