--- a/client/client.css
+++ b/client/client.css
@@ -85,16 +85,16 @@ body {
 }
 
 .enemy_ship_2 {
-  background-image: url('/nightraider.png');
+  background-image: url('/killer.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   position: fixed;
   display: block;
-  width: 120px;
-  height: 120px;
-  margin-left: -60px;
-  margin-top: -60px;
+  width: 200px;
+  height: 200px;
+  margin-left: -100px;
+  margin-top: -100px;
   font-size: 0.6em;
   color: #ffffff;
 }
